@@ -103,6 +103,10 @@ CONFIGURATION
         faster when many people access the same images, but it will also
         cache EXIF data until the current Apache child dies.
 
+    GalleryUseFileDate
+        Set this option to 1 to make A::G show the files timestamp instead
+        of the EXIF value for "Picture taken".
+
 FEATURES
     Rotate images
         Some cameras, like the Canon G3, detects the orientation of a
