@@ -7,7 +7,7 @@ use strict;
 
 use vars qw($VERSION);
 
-$VERSION = "0.6";
+$VERSION = "0.6.1";
 
 use Apache ();
 use Apache::Constants qw(:common);
@@ -861,6 +861,14 @@ sub get_imageinfo {
 		} 
 	}
 
+	if ($r->dir_config('GalleryUseFileDate') &&
+		($r->dir_config('GalleryUseFileDate') eq '1'
+		|| !$imageinfo->{"Picture Taken"} )) {
+
+		my $st = stat($file);
+		$imageinfo->{"DateTimeOriginal"} = $imageinfo->{"Picture Taken"} = scalar localtime($st->mtime) if $st;
+	}
+
 	return $imageinfo;
 }
 
@@ -1215,6 +1223,11 @@ stat attribute. For example size, atime, mtime, ctime.
 Cache EXIF data using Memoize - this will make Apache::Gallery faster
 when many people access the same images, but it will also cache EXIF
 data until the current Apache child dies.
+
+=item B<GalleryUseFileDate>
+
+Set this option to 1 to make A::G show the files timestamp
+instead of the EXIF value for "Picture taken".
 
 =back
 
