@@ -13,6 +13,8 @@ Revision history for Perl extension Apache::Gallery.
 	- Fix to let the module work with perl 5.005 (Aaron)
 	- Do not allow scaling pictures to sizes above their
 	  original size (Aaron)
+	- Added GalleryUseFileDate option to make A::G show
+	  the files timestamps instead of using the EXIF value (Dennis Haney)
 
 0.6 Tue Apr 22 10:24:40 CEST 2003
 
